# kemena3d-studio

./: .gitignore  CMakeLists.txt  ConsolePane.cpp  ConsolePane.h  Dockable.h  HierarchyPane.cpp  HierarchyPane.h  InspectorPane.cpp  InspectorPane.h  Kemena3DStudio.cbp  Kemena3DStudio.depend  Kemena3DStudio.layout  KemenaGameStudio.cbp  KemenaGameStudio.depend  KemenaGameStudio.layout  MainMenu.h  MainWindow.cpp  MainWindow.h  NewProjectDialog.cpp  NewProjectDialog.h  ProjectPane.cpp  ProjectPane.h  README.md  ScenePane.cpp  ScenePane.h  ScriptPane.cpp  ScriptPane.h  build_editor.py  layout.ini  main.cpp  resources.rc
dep/: README.md
include/: ArtProvider.h  FileManager.h  MainMenu.h  Md5.h  Panel_Console.h  Panel_Hierarchy.h  Panel_Inspector.h  Panel_Project.h  Panel_Scene.h  RendererWindow.h  commands.h  datatype.h  filemanager.h  mainmenu.h  manager.h  panel_console.h  panel_game.h  panel_hierarchy.h  panel_inspector.h  panel_project.h  panel_shader_editor.h  panel_world.h  splash_screen.h  util.h
res/: layout.ini
res/fonts/: README.md
res/icons/file/: README.md
res/shaders/: flat.frag  flat.vert  grid.frag  grid.glsl  grid.hlsl  grid.vert  icon.frag  icon.glsl  icon.hlsl  icon.vert  mesh.vert  mesh_flat.frag  mesh_flat.glsl  mesh_flat.hlsl  mesh_pbr.frag  mesh_pbr.glsl  mesh_pbr.hlsl  mesh_phong.frag  mesh_phong.glsl  mesh_phong.hlsl  skybox.frag  skybox.glsl  skybox.hlsl  skybox.vert
res/textures/: README.md
res/textures/gizmo/: README.md
res/textures/skybox/: README.md  back.tga  bottom.tga  front.tga  left.tga  right.tga  top.tga
sample/asset/: sample.as  sample.prefab  sample.world  sample_reference
sample/config/: project.json
src/: ArtProvider.cpp  FileManager.cpp  RendererWindow.cpp  commands.cpp  filemanager.cpp  mainmenu.cpp  manager.cpp  panel_console.cpp  panel_game.cpp  panel_hierarchy.cpp  panel_inspector.cpp  panel_project.cpp  panel_shader_editor.cpp  panel_world.cpp  splash_screen.cpp  util.cpp
wxsmith/: ConsolePane.wxs  HierarchyPane.wxs  InspectorPane.wxs  MainWindow.wxs  NewProjectDialog.wxs  ProjectPane.wxs  ScenePane.wxs  ScriptPane.wxs
